--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./java.js"></script>
 </head>
 <body>
-    
+    <header class="heade">
+        <h6>Rock Paper Scissor</h3>
+    </header>
 </body>
 </html>
