Got the buttons looking nicely. Testin if i can change the text each time i click a button

--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <header class="heade">
         <h6>Rock Paper Scissor</h3>
     </header>
+
+    <div class="mainC">
+        <button class="rock">🪨</button>
+        <button class="paper">📄</button>
+        <button class="scissor">✄</button>
+    </div>
+
+    <div class="scores">
+        <h3>Hello world!</h3>
+    </div>
 </body>
 </html>
