Got the text changing for player choice and machine choice

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     </div>
 
     <div class="scores">
-        <h3>Hello world!</h3>
+        <h3 class="score">Hello world!</h3>
+        <h3 class="computer">Hello world!</h3>
     </div>
+
+    <script src="./text.js"></script>
 </body>
 </html>
