--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <h3 class="computer">Hello world!</h3>
     </div>
 
+    <div class="winner">
+        <h1>Hello world!</h1>
+    </div>
+    
     <script src="./text.js"></script>
 </body>
 </html>
